--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
         <i class='bx bx-manu' id="menu icon"></i>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a href="#" class="logo"><span>P</span>ortfolio</a>
+                <a href="#" style="text-decoration:none" class="logo"><span class="portfolio-logo">P</span>ortfolio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                   <a href="#home" class="active">Home</a>
+                   <a style="text-decoration:none" href="#home" class="active">Home</a>
                     </li>
                   <li class="nav-item">
-                    <a href="#about">About</a>
+                    <a style="text-decoration:none" href="#about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#skills">Skills</a>
+                    <a style="text-decoration:none" href="#skills">Skills</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#projects">Projects</a>
+                    <a style="text-decoration:none" href="#projects">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#contact">Contact</a>
+                    <a style="text-decoration:none" href="#contact">Contact</a>
                   </li>
               </div>
             </div>
@@ -100,13 +100,12 @@
 
 
 <!-----------------About section---------------->
-
+<h2 class="heading">About <span>Me</span></h2>
 <section class="about" id="about">
     <div class="about-img">
         <img src="edit.jpeg" alt="black and white pic">
     </div>
     <div class="about-content">
-        <h2 class="heading">About <span>Me</span></h2>
         <br>
         <h3>Personal Info :</h3>
         <br>
